# ttsdb

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/blizzard08/: benchmark_blizzard.py  correlations.csv  gt_mos.csv  model.pickle  pesq.csv  plot_distribution.py  results.csv  utmos.csv  wv-mos.csv
examples/blizzard08/processed_data/A/: 0_novel_2008_0169.txt
examples/blizzard08/processed_data/B/: 0_novel_2008_0146.txt
examples/blizzard08/processed_data/C/: 0_news_2008_0002.txt  0_news_2008_0090.txt  0_novel_2008_0048.txt  0_novel_2008_0111.txt
examples/blizzard08/processed_data/D/: 0_sus_2008_0119.txt  0_sus_2008_0200.txt
examples/blizzard08/processed_data/E/: 0_conv_2008_0055.txt  0_news_2008_0078.txt  0_novel_2008_0159.txt  0_novel_2008_0179.txt  0_sus_2008_0019.txt  0_sus_2008_0188.txt
examples/blizzard08/processed_data/F/: 0_news_2008_0093.txt  0_sus_2008_0002.txt
examples/blizzard08/processed_data/G/: 0_novel_2008_0065.txt  0_novel_2008_0127.txt  (+1 more)
examples/blizzard13-ext/: b13_listening_effort.csv  b13_naturalness.csv  b13_overall.csv  b13_pronunciation.csv  b13_voice_pleasantness.csv  benchmark_blizzard.py  correlations.csv  gt_mos.csv  kaldi.csv  pesq.csv  results.csv  utmos.csv  wv-mos.csv
examples/tts_arena/: benchmark_ttsarena.py  correlations.csv  gt_mos.csv  kaldi.csv  parler.tar.gz_dist.pkl  plot_distributions.py  results.csv  results_1.csv  results_notrim.csv  utmos.csv  voicecraft2.tar.gz_dist.pkl  wv-mos.csv
src/ttsdb/: __init__.py
src/ttsdb/benchmarks/: benchmark.py
src/ttsdb/util/: cache.py  dataset.py  distances.py  kaldi.py  measures.py
streamlit/: TTSDB.py
streamlit/pages/: 1_Benchmarks.py
tests/: __init__.py  test_benchmarks.py
(+83 files in other folders)
