[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttsdb"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.21.0",
  "librosa>=0.8.0",
  "transformers>=4.0.0",
  "torch>=2.0.0",
  "tqdm>=4.61.0",
  "pandas>=1.3.0",
]

[project.urls]
Documentation = "https://github.com/MiniXC/ttsdb#readme"
Issues = "https://github.com/MiniXC/ttsdb/issues"
Source = "https://github.com/MiniXC/ttsdb"

[tool.hatch.version]
path = "src/ttsdb/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest>=6.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ttsdb tests}"

[tool.coverage.run]
source_pkgs = ["ttsdb", "tests"]
branch = true
parallel = true
omit = [
  "src/ttsdb/__about__.py",
]

[tool.coverage.paths]
ttsdb = ["src/ttsdb", "*/ttsdb/src/ttsdb"]
tests = ["tests", "*/ttsdb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
